master: reorganizing file directory for project

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<div class="jumbotron text-center">
 		<div class="row">
 			<br>
-			<img class="main_pics" src="Profile-Pictures/ProfilePicture.png" />
+			<img class="main_pics" src="img/profile_picture.png" />
 			<h1><strong>Anuj Shah</strong></h1>
 			<br><br>
 			<div class="row">
@@ -64,7 +64,8 @@
 				</div>
 			</div>
 			<br>
-			<a id="resume" href="Anuj_Shah-Resume.pdf" download><span class=" glyphicon glyphicon-download-alt"></span>
+			<a id="resume" href="files/Anuj_Shah-Resume.pdf" download><span
+					class=" glyphicon glyphicon-download-alt"></span>
 				R&eacute;sum&eacute;</a>
 		</div>
 	</div>
@@ -77,7 +78,7 @@
 			<div class="col-sm-4"></div>
 			<div class="col-sm-4">
 				<a href="https://www.sendgrid.com/">
-					<img class="logo" src="Work/SendGrid_Logo.png" />
+					<img class="logo" src="img/work/SendGrid_Logo.png" />
 				</a>
 				<p class="company"><strong>Software Engineer at Twilio SendGrid</strong></p>
 			</div>
@@ -91,19 +92,19 @@
 		<div class="row">
 			<div class="col-sm-4">
 				<a href="https://www.symantec.com/">
-					<img class="logo" src="Work/Symantec_Logo.png" />
+					<img class="logo" src="img/work/Symantec_Logo.png" />
 				</a>
 				<p class="company"><strong>Software Engineering Intern at Symantec</strong></p>
 			</div>
 			<div class="col-sm-4">
 				<a href="http://www.idtech.com/locations/new-york-summer-camps/new-york/id-programming-nyu/">
-					<img class="logo" src="Work/iD_Tech_Logo.png" />
+					<img class="logo" src="img/work/iD_Tech_Logo.png" />
 				</a>
 				<p class="company"><strong>Instructor at iD Tech Programming Academy</strong></p>
 			</div>
 			<div class="col-sm-4">
 				<a href="http://www.joyrun.com/">
-					<img class="logo" src="Work/JoyRun_Logo.png" />
+					<img class="logo" src="img/work/JoyRun_Logo.png" />
 				</a>
 				<p class="company"><strong>Brand Ambassador at JoyRun</strong></p>
 			</div>
@@ -112,19 +113,19 @@
 		<div class="row">
 			<div class="col-sm-4">
 				<a href="http://www.iacapps.com/">
-					<img class="logo" src="Work/IAC_Applications_Logo.png" />
+					<img class="logo" src="img/work/IAC_Applications_Logo.png" />
 				</a>
 				<p class="company"><strong>JavaScript Engineer Intern at IAC Applications</strong></p>
 			</div>
 			<div class="col-sm-4">
 				<a href="http://www.wayup.com/">
-					<img class="logo" src="Work/WayUp_Logo.jpg" />
+					<img class="logo" src="img/work/WayUp_Logo.jpg" />
 				</a>
 				<p class="company"><strong>Campus Rep at WayUp</strong></p>
 			</div>
 			<div class="col-sm-4">
 				<a href="http://www.greenburghny.com/">
-					<img class="logo" src="Work/Greenburgh_Logo.gif" />
+					<img class="logo" src="img/work/Greenburgh_Logo.gif" />
 				</a>
 				<p class="company"><strong>Intern at Greenburgh Town Hall</strong></p>
 			</div>
@@ -138,25 +139,25 @@
 		<h2>Programming Languages</h2>
 		<div class="row">
 			<div class="col-sm-4">
-				<img class="logo" src="Programming-Languages/Java.png" />
+				<img class="logo" src="img/languages/java.png" />
 			</div>
 			<div class="col-sm-4">
-				<img class="logo" src="Programming-Languages/Python.jpg" />
+				<img class="logo" src="img/languages/python.jpg" />
 			</div>
 			<div class="col-sm-4">
-				<img class="logo" src="Programming-Languages/CPlusPlus.png" />
+				<img class="logo" src="img/languages/c_plus_plus.png" />
 			</div>
 		</div>
 		<br><br>
 		<div class="row">
 			<div class="col-sm-4">
-				<img class="logo" src="Programming-Languages/HTML.png" />
+				<img class="logo" src="img/languages/html.png" />
 			</div>
 			<div class="col-sm-4">
-				<img class="logo" src="Programming-Languages/CSS.png" />
+				<img class="logo" src="img/languages/css.png" />
 			</div>
 			<div class="col-sm-4">
-				<img class="logo" src="Programming-Languages/JavaScript.png" />
+				<img class="logo" src="img/languages/javascript.png" />
 			</div>
 		</div>
 	</div>
@@ -175,7 +176,7 @@
 					<h3>B.A. in Business Administration</h3>
 				</div>
 				<div class="col-sm-4">
-					<a href="http://uci.edu/"><img src="UCI/UCI_Words.png" /></a>
+					<a href="http://uci.edu/"><img src="img/education/words.png" /></a>
 				</div>
 				<div class="col-sm-4">
 					<h3>Emphasis in Information</h3>
@@ -188,21 +189,23 @@
 	<br><br>
 
 	<div id="contact" class="container-fluid bg-grey">
-		<h2 class="text-center">Contact Me</h2>
+		<h2>Contact Me</h2>
+		<br>
 		<div class="row">
-			<div class="col-sm-5">
+			<div class="col-sm-4">
 				<p>Contact me and I'll get back to you within 48 hours.</p>
 				<p><span class="glyphicon glyphicon-map-marker"></span> Irvine, CA</p>
 				<p><span class="glyphicon glyphicon-phone"></span> 914.482.1633</p>
 				<p><span class="glyphicon glyphicon-envelope"></span> anujshah26@gmail.com</p>
 			</div>
-			<div class="col-sm-7">
+			<div class="col-sm-4">
 				<div class="row">
 					<iframe
 						src="https://docs.google.com/forms/d/e/1FAIpQLScLdtGWFBBFoGZ7dE11UHoV7a36HsorAiKIZC9oR7SEanPymg/viewform?embedded=true"
 						width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 				</div>
 			</div>
+			<div class="col-sm-4"></div>
 		</div>
 	</div>
 
