--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 				<div class="row">
 					<iframe
 						src="https://docs.google.com/forms/d/e/1FAIpQLScLdtGWFBBFoGZ7dE11UHoV7a36HsorAiKIZC9oR7SEanPymg/viewform?embedded=true"
-						width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+						width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 				</div>
 			</div>
 			<div class="col-sm-4"></div>
