master: image enhancement

--- a/index.html
+++ b/index.html
@@ -135,29 +135,42 @@
 	<br><br>
 
 	<!-- Technologies -->
-	<div id="tech" class="container-fluid text-center">
+	<div id="tech" class="container-fluid text-center bg-grey">
 		<h2>Programming Languages</h2>
 		<div class="row">
 			<div class="col-sm-4">
+				<img class="logo" src="img/languages/python.png" />
+			</div>
+			<div class="col-sm-4">
+				<img class="logo" src="img/languages/go.png" />
+			</div>
+			<div class="col-sm-4">
 				<img class="logo" src="img/languages/java.png" />
-			</div>
-			<div class="col-sm-4">
-				<img class="logo" src="img/languages/python.jpg" />
-			</div>
-			<div class="col-sm-4">
-				<img class="logo" src="img/languages/c_plus_plus.png" />
 			</div>
 		</div>
 		<br><br>
 		<div class="row">
+			<div class="col-sm-4">
+				<img class="logo" src="img/languages/javascript.png" />
+			</div>
 			<div class="col-sm-4">
 				<img class="logo" src="img/languages/html.png" />
 			</div>
 			<div class="col-sm-4">
 				<img class="logo" src="img/languages/css.png" />
 			</div>
+		</div>
+		<br>
+		<h2>Technologies</h2>
+		<div class="row">
 			<div class="col-sm-4">
-				<img class="logo" src="img/languages/javascript.png" />
+				<img class="logo" src="img/technologies/aws.png" />
+			</div>
+			<div class="col-sm-4">
+				<img class="logo" src="img/technologies/terraform.png" />
+			</div>
+			<div class="col-sm-4">
+				<img class="logo" src="img/technologies/kubernetes.png" />
 			</div>
 		</div>
 	</div>
