--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 				<img class="logo" src="img/languages/css.png" />
 			</div>
 		</div>
-		<br>
+		<br><br>
 		<h2>Technologies</h2>
 		<div class="row">
 			<div class="col-sm-4">
@@ -171,6 +171,18 @@
 			</div>
 			<div class="col-sm-4">
 				<img class="logo" src="img/technologies/kubernetes.png" />
+			</div>
+			<br><br>
+			<div class="row">
+				<div class="col-sm-4">
+					<img class="logo" src="img/technologies/heroku.png" />
+				</div>
+				<div class="col-sm-4">
+					<img class="logo" src="img/technologies/git.png" />
+				</div>
+				<div class="col-sm-4">
+					<img class="logo" src="img/technologies/buildkite.png" />
+				</div>
 			</div>
 		</div>
 	</div>
