--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<a href="http://www.github.com/anujs3">
 						<i class="fab fa-github-square fa-2x"></i>
 					</a>
-					<a href="http://www.twitter.com/anujs26">
+					<a href="http://www.twitter.com/snujshah">
 						<i class="fab fa-twitter-square fa-2x"></i>
 					</a>
 				</div>
@@ -77,10 +77,10 @@
 		<div class="row">
 			<div class="col-sm-4"></div>
 			<div class="col-sm-4">
-				<a href="https://www.sendgrid.com/">
-					<img class="logo" src="img/work/SendGrid_Logo.png" />
+				<a href="https://www.meta.com/">
+					<img class="logo" src="img/work/Meta_Logo.png" />
 				</a>
-				<p class="company"><strong>Software Engineer at Twilio SendGrid</strong></p>
+				<p class="company"><strong>Business Engineer at Meta</strong></p>
 			</div>
 			<div class="col-sm-4"></div>
 		</div>
@@ -91,31 +91,31 @@
 		<br>
 		<div class="row">
 			<div class="col-sm-4">
+				<a href="https://www.sendgrid.com/">
+					<img class="logo" src="img/work/SendGrid_Logo.png" />
+				</a>
+				<p class="company"><strong>Software Engineer at Twilio SendGrid</strong></p>
+			</div>
+			<div class="col-sm-4">
 				<a href="https://www.symantec.com/">
 					<img class="logo" src="img/work/Symantec_Logo.png" />
 				</a>
 				<p class="company"><strong>Software Engineering Intern at Symantec</strong></p>
 			</div>
 			<div class="col-sm-4">
-				<a href="http://www.idtech.com/locations/new-york-summer-camps/new-york/id-programming-nyu/">
+				<a href="https://www.idtech.com/locations/new-york-summer-camps/nyu">
 					<img class="logo" src="img/work/iD_Tech_Logo.png" />
 				</a>
 				<p class="company"><strong>Instructor at iD Tech Programming Academy</strong></p>
-			</div>
-			<div class="col-sm-4">
-				<a href="http://www.joyrun.com/">
-					<img class="logo" src="img/work/JoyRun_Logo.png" />
-				</a>
-				<p class="company"><strong>Brand Ambassador at JoyRun</strong></p>
 			</div>
 		</div>
 		<br><br>
 		<div class="row">
 			<div class="col-sm-4">
-				<a href="http://www.iacapps.com/">
+				<a href="https://www.iac.com/">
 					<img class="logo" src="img/work/IAC_Applications_Logo.png" />
 				</a>
-				<p class="company"><strong>JavaScript Engineer Intern at IAC Applications</strong></p>
+				<p class="company"><strong>JavaScript Engineer Intern at IAC</strong></p>
 			</div>
 			<div class="col-sm-4">
 				<a href="http://www.wayup.com/">
@@ -197,6 +197,19 @@
 			<br>
 			<div class="row">
 				<div class="col-sm-4">
+					<h3>Master of Business Administration</h3>
+					<h3>Rady School of Management</h3>
+				</div>
+				<div class="col-sm-4">
+					<a href="https://rady.ucsd.edu/"><img src="img/education/rady.png" /></a>
+				</div>
+				<div class="col-sm-4">
+					<h3>Class of 2024</h3>
+				</div>
+			</div>
+			<br><br><br><br>
+			<div class="row">
+				<div class="col-sm-4">
 					<h3>B.S. in Computer Science</h3>
 					<h3>B.A. in Business Administration</h3>
 				</div>
@@ -219,7 +232,7 @@
 		<div class="row">
 			<div class="col-sm-4">
 				<p>Contact me and I'll get back to you within 48 hours.</p>
-				<p><span class="glyphicon glyphicon-map-marker"></span> Irvine, CA</p>
+				<p><span class="glyphicon glyphicon-map-marker"></span> San Diego, CA</p>
 				<p><span class="glyphicon glyphicon-phone"></span> 914.482.1633</p>
 				<p><span class="glyphicon glyphicon-envelope"></span> anujshah26@gmail.com</p>
 			</div>
