--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 					<h3>Rady School of Management</h3>
 				</div>
 				<div class="col-sm-4">
-					<a href="https://rady.ucsd.edu/"><img src="img/education/rady.png" /></a>
+					<a href="https://rady.ucsd.edu/"><img src="img/education/ucsd.png" /></a>
 				</div>
 				<div class="col-sm-4">
 					<h3>Class of 2024</h3>
